website/i18n/zh-CN/docusaurus-plugin-content-docs/version-3.2.1/migration/v3.mdx
---
slug: /migration/v3
sidebar_label: To Docusaurus v3
---

# 升级至 Docusaurus v3

本文档将指导您将站点从 Docusaurus v2 升级至 Docusaurus v3。

Docusaurus v3 是一个**主版本更新**，包含需要您相应调整站点的**破坏性变更**。我们将在此过程中提供指引，并给出一些可选建议。

这并非完全重写，且破坏性变更相对容易处理。最简单的站点仅需更新 npm 依赖即可完成升级。

主要破坏性变更是从 MDX v1 升级至 MDX v3。请阅读 [**MDX v2**](https://mdxjs.com/blog/v2/) 和 [**MDX v3**](https://mdxjs.com/blog/v3/) 的发布说明以获取详情。MDX 现在会以**更严格的标准**和**细微差异**编译您的 Markdown 内容。

:::tip[升级前准备]

在升级前，我们建议先[**为 Docusaurus v3 准备您的站点**](/blog/preparing-your-site-for-docusaurus-v3)。有些变更您可以在**Docusaurus v2 环境下逐步处理**。这样做能减少最终升级至 Docusaurus v3 所需的工作量。

对于复杂站点，我们还建议设置[**视觉回归测试**](/blog/upgrading-frontend-dependencies-with-confidence-using-visual-regression-testing)，这是确保站点视觉表现一致的有效方法。Docusaurus v3 主要升级依赖项，预计不会产生视觉变化。

:::

:::note

请查阅 [**Docusaurus v3.0.0**](https://github.com/facebook/docusaurus/releases/tag/v3.0.0) 的发布说明，并通过浏览相关 pull-requests 获取更多有用信息及本文提及变更的背景动机。

:::

## 升级依赖项

升级至 Docusaurus v3 需要更新核心 Docusaurus 依赖 (`@docusaurus/name`) 以及其他相关包。

Docusaurus v3 现在使用以下依赖：

- Node.js v18.0+
- React v18.0+
- MDX v3.0+
- TypeScript v5.1+
- prism-react-renderer v2.0+
- react-live v4.0+
- remark-emoji v4.0+
- mermaid v10.4+

:::warning[升级社区插件]

如果您的站点使用了第三方社区插件和主题，您可能需要升级它们。

在尝试升级前，请确保这些插件与 Docusaurus v3 兼容。

:::

典型的 `package.json` 依赖升级示例：

```diff title="package.json"
 {
   "dependencies": {
     // upgrade to Docusaurus v3
-    "@docusaurus/core": "2.4.3",
-    "@docusaurus/preset-classic": "2.4.3",
+    "@docusaurus/core": "3.0.0",
+    "@docusaurus/preset-classic": "3.0.0",
     // upgrade to MDX v3
-    "@mdx-js/react": "^1.6.22",
+    "@mdx-js/react": "^3.0.0",
     // upgrade to prism-react-renderer v2.0+
-    "prism-react-renderer": "^1.3.5",
+    "prism-react-renderer": "^2.1.0",
     // upgrade to React v18.0+
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     // upgrade Docusaurus dev dependencies to v3
-    "@docusaurus/module-type-aliases": "2.4.3",
-    "@docusaurus/types": "2.4.3"
+    "@docusaurus/module-type-aliases": "3.0.0",
+    "@docusaurus/types": "3.0.0"
   }
   "engines": {
     // require Node.js 18.0+
-    "node": ">=16.14"
+    "node": ">=18.0"
   }
 }
```

对于 TypeScript 用户：

```diff title="package.json"
 {
   "devDependencies": {
     // swap the external TypeScript config package for the new official one
-    "@tsconfig/docusaurus": "^1.0.7",
+    "@docusaurus/tsconfig": "3.0.0",
     // upgrade React types to v18.0+
-    "@types/react": "^17.0.69",
+    "@types/react": "^18.2.29",
     // upgrade TypeScript to v5.1+
-    "typescript": "~4.7.4"
+    "typescript": "~5.2.2"
   }
 }
```

## 升级 MDX

MDX 是 Docusaurus 的核心依赖项，负责将您的 `.md` 和 `.mdx` 文件编译为 React 组件。

从 MDX v1 过渡到 MDX v3 是采用 Docusaurus v3 的**主要挑战**。大部分破坏性变更来自 MDX v2，而 MDX v3 是一个相对较小的版本。

某些在 Docusaurus v2 下能成功编译的文档，现在可能在 Docusaurus v3 下**编译失败**。

:::tip[提前发现潜在问题内容]

在您的站点上运行 [`npx docusaurus-mdx-checker`](https://github.com/slorber/docusaurus-mdx-checker) 以获取在 Docusaurus v3 下会编译失败的文件列表。

此命令也是评估兼容性改造工作量的好方法。请注意大部分工作可以通过[为 Docusaurus v3 准备内容](/blog/preparing-your-site-for-docusaurus-v3)提前完成。

:::

其他文档也可能**呈现不同效果**。

:::tip[使用可视化回归测试]

对于大型站点而言，手动检查所有页面会非常繁琐，我们建议您设置[可视化回归测试](https://docusaurus.io/blog/upgrading-frontend-dependencies-with-confidence-using-visual-regression-testing)。

:::

升级MDX会带来[MDX v2](https://mdxjs.com/blog/v2/)和[MDX v3](https://mdxjs.com/blog/v3/)发布博客中记录的所有破坏性变更。大多数破坏性变更来自MDX v2，而MDX v3是一个相对较小的版本。[MDX v2迁移指南](https://mdxjs.com/migrating/v2/)中有一个关于[如何更新MDX文件](https://mdxjs.com/migrating/v2/#update-mdx-files)的部分，这对我们特别有用。同时请务必阅读[MDX故障排除](https://mdxjs.com/docs/troubleshooting-mdx/)页面，它可以帮助您理解常见的MDX错误信息。

请确保同时阅读我们更新的[**MDX与React**](../guides/markdown-features/markdown-features-react.mdx)文档页面。

### 使用MDX Playground

MDX Playground是您的新朋友。它可以帮助您理解您的内容是如何**被编译为React组件**的，并隔离地解决编译或渲染问题。

- [MDX Playground - 当前版本](https://mdxjs.com/playground/)
- [MDX Playground - v1](https://mdx-git-renovate-babel-monorepo-mdx.vercel.app/playground/)

<details>
  <summary>Configuring the MDX playground options for Docusaurus</summary>

To obtain a compilation behavior similar to what Docusaurus v2 uses, please turn on these options on the [MDX playground](https://mdxjs.com/playground/):

- Use `MDX`
- Use `remark-gfm`
- Use `remark-directive`

![Screenshot of the MDX playground's options panel, with only the "Use `MDX`", "Use `remark-gfm`", and "Use `remark-directive`" options checked](@site/blog/2023/09-29-preparing-your-site-for-docusaurus-v3/img/mdx2-playground-options.png)

</details>

同时使用两个MDX Playground，您很快就会发现某些内容在v2中的编译方式不同或无法编译。

:::tip[使您的内容面向未来]

目标将是重构您的问题内容，使其**在两个版本的MDX中都能正常工作**。这样，当您升级到Docusaurus v3时，这些内容已经可以开箱即用。

:::

### 使用MDX检查器CLI

我们提供了一个[docusaurus-mdx-checker](https://github.com/slorber/docusaurus-mdx-checker) CLI，可以轻松发现有问题内容。在您的站点上运行此命令，以获取在MDX v3下无法编译的文件列表。

```bash
npx docusaurus-mdx-checker
```

对于每个编译问题，CLI将记录文件路径和需要查看的行号。

![终端截图，显示MDX检查器CLI输出的示例，包含一些错误信息](@site/blog/2023/09-29-preparing-your-site-for-docusaurus-v3/img/mdx-checker-output.png)

:::tip

使用此CLI来估算使您的内容与MDX v3兼容需要多少工作量。

:::

:::warning

此CLI是尽力而为的，**仅报告编译错误**。

它不会报告那些不产生错误但可能影响您内容显示的细微编译变化。为了捕捉这些问题，我们建议使用[可视化回归测试](/blog/upgrading-frontend-dependencies-with-confidence-using-visual-regression-testing)。

:::

### 常见的MDX问题

Docusaurus无法详尽记录MDX带来的所有变更。这是[MDX v2](https://mdxjs.com/migrating/v2/)和[MDX v3](https://mdxjs.com/migrating/v3/)迁移指南的责任。

然而，通过升级几个Docusaurus站点，我们注意到大多数问题归结为少数几种情况，我们已经为您记录了这些情况。

#### 错误使用`{`

`{`字符用于打开[JavaScript表达式](https://mdxjs.com/docs/what-is-mdx/#expressions)。如果放在`{expression}`中的内容不是有效表达式，MDX现在会失败。

```md title="example.md"
The object shape looks like {username: string, age: number}
```

:::danger[错误信息]

> 无法用 acorn 解析表达式：表达式后出现意外内容

:::

:::tip[升级方案]

可选的修复方案：

- 使用行内代码：`{username: string, age: number}`
- 使用 HTML 实体编码：`&#123;`
- 使用转义符：`\{`

:::

#### 错误使用 `<` 符号

`<` 符号用于开启 [JSX 标签](https://mdxjs.com/docs/what-is-mdx/#jsx)。如果 MDX 认为你的 JSX 无效，解析将会失败。

```md title="example.md"
Use Android version <5

You can use a generic type like Array<T>

Follow the template "Road to <YOUR_MINOR_VERSION>"
```

:::danger[错误信息示例]

> 在名称前出现意外字符 `5` (U+0035)，期望是能作为名称起始的字符（如字母、`$` 或 `_`）

> 在段落结束标签前期望出现 `</T>` 的闭合标签 (1:6-1:9)，标签不匹配

> 在段落结束前期望出现 `</YOUR_MINOR_VERSION>` 的闭合标签 (134:19-134:39)

:::

:::tip[升级方案]

可选的修复方案：

- 使用行内代码：`Array<T>`
- 使用 HTML 实体编码：`&lt;` 或 `&#60;`
- 使用转义符：`\<`

:::

#### 错误使用 GFM 自动链接

Docusaurus 支持 [GitHub 风味 Markdown (GFM)](https://github.github.com/gfm/)，但 MDX 不再支持使用 `<link>` 语法的[自动链接](https://github.github.com/gfm/#autolinks)。

```md title="example.md"
<sebastien@thisweekinreact.com>

<http://localhost:3000>
```

:::danger[错误信息示例]

> 名称中出现意外字符 `@` (U+0040)，期望是名称字符（如字母、数字、`$` 或 `_`）、属性前的空白或标签结束符（注意：在 MDX 中创建链接请使用 `[文本](网址)`）

> 在本地名称前出现意外字符 `/` (U+002F)，期望是能作为名称起始的字符（如字母、`$` 或 `_`）（注意：在 MDX 中创建链接请使用 `[文本](网址)`）

:::

:::tip[升级方案]

使用标准 Markdown 链接语法，或移除 `<` 和 `>` 符号。MDX 和 GFM 已能自动识别纯文本链接。

{/* prettier-ignore */}
```md title="示例.md"
sebastien@thisweekinreact.com
[sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com)

http://localhost:3000
[http://localhost:3000](http://localhost:3000)
```

:::

#### 小写 MDXComponent 映射问题

对于自定义 [`MDXComponent` 映射](../guides/markdown-features/markdown-features-react.mdx#mdx-component-scope)的用户，组件现在处于"沙盒"环境中：

- `h1` 的 `MDXComponent` 映射仅适用于 `# 标题` 语法，不适用于 `<h1>标题</h1>`
- **小写**的自定义元素名称将不再被对应的 `MDXComponent` 组件替换

:::danger[显示差异]

你的 [MDXComponent 组件映射](../guides/markdown-features/markdown-features-react.mdx#mdx-component-scope)可能不再像之前那样生效，自定义组件可能不再被使用。

:::

:::tip[如何升级]

对于原生 Markdown 元素，可以继续使用**小写形式**：`p`、`h1`、`img`、`a`...

对于其他任何元素，**请使用大写名称**。

```diff title="src/theme/MDXComponents.js"
 import MDXComponents from '@theme-original/MDXComponents';

 export default {
   ...MDXComponents,
   p: (props) => <p {...props} className="my-paragraph"/>
-  myElement: (props) => <div {...props} className="my-class" />,
+  MyElement: (props) => <div {...props} className="my-class" />,
 };
```

:::

#### 意外产生的额外段落

在 MDX v3 中，现在可以更轻松地混合使用 JSX 和 Markdown，而无需额外的换行符。在多行编写内容也可能产生预期之外的新 `<p>` 标签。

:::danger[视觉差异]

观察以下内容在 MDX v1 和 v3 中的渲染差异。

```md title="example.md"
<div>Some **Markdown** content</div>
<div>
  Some **Markdown** content
</div>
```

{/* prettier-ignore */}
```html title="MDX v1 输出"
<div>Some **Markdown** content</div>
<div>Some **Markdown** content</div>
```

{/* prettier-ignore */}
```html title="MDX v3 输出"
<div>Some <strong>Markdown</strong> content</div>
<div><p>Some <strong>Markdown</strong> content</p></div>
```

:::

:::tip[如何升级]

如果不希望产生额外的 `<p>` 标签，请根据具体情况重构为单行 JSX 标签。

```diff
 <figure>
   <img src="/img/myImage.png" alt="My alt" />
-  <figcaption>
-    My image caption
-  </figcaption>
+  <figcaption>My image caption</figcaption>
 </figure>
```

:::

#### 指令的意外使用

Docusaurus v3 现在使用 [Markdown 指令](https://talk.commonmark.org/t/generic-directives-plugins-syntax/444)（通过 [remark-directive](https://github.com/remarkjs/remark-directive) 实现）作为通用方式支持 admonitions 和其他即将推出的 Docusaurus 功能。

```md title="example.md"
This is a :textDirective

::leafDirective

:::containerDirective

Container directive content

:::
```

:::danger[视觉变化]

指令会被解析并由其他 Remark 插件处理。未处理的指令将被忽略，不会以原始形式渲染。

```md title="example.md"
The AWS re:Invent conf is great
```

由于 `:Invent` 被解析为文本指令，现在会渲染为：

```
The AWS re
conf is great
```

:::

:::tip[如何升级]

- 使用 HTML 编码：`&#58;`
- 在 `:` 后添加空格（如果适用）：`: text`
- 使用转义符：`\:`

:::

#### 不再支持缩进式代码块

MDX 不再将缩进文本转换为代码块。

```md title="example.md"
    console.log("hello");
```

:::danger[视觉变化]

升级通常不会产生新的 MDX 编译错误，但可能导致内容以意外方式渲染，因为不再有代码块。

:::

:::tip[如何升级]

使用常规代码块语法替代缩进：

````md title="example.md"
```js
console.log('hello');
```
````

:::

### 其他 Markdown 不兼容性

#### 以空格或标点符号开头/结尾的强调

新版 MDX 解析器严格遵循 CommonMark 规范。自 v0.14 起，CommonMark 规范引入了关于强调与空格和标点符号的规则，这对不使用空格分隔单词的语言尤其不兼容。

日语和中文受此影响最大，但其他一些语言也可能受到影响（如泰语和高棉语），例如当您尝试强调内联代码或链接时。使用空格分隔单词的语言受影响程度要小得多。

以下示例中的 `**`（除了 `` `**` ``）在 Docusaurus 2 中按预期解析，但在 Docusaurus 3 中不再如此。

```md title="example.md"
**Do not end a range of emphasis with a space. **Or `**` will not work as intended.

<!-- Japanese -->
**「。」の後に文を続けると`**`が意図した動作をしません。**また、**[リンク](https://docusaurus.io/)**や**`コード`**のすぐ外側に`**`、そのさらに外側に句読点以外がある場合も同様です。
```

<details>
<summary>See the detailed conditions and how to upgrade</summary>

If `*` or `**` matches either of the following conditions, it will not work as the beginning of an emphasis mark anymore:

- The next character is a space (e.g. `word* word`)
- The previous character is a punctuation character and the next character is a letter (not a space or punctuation character) (e.g. `文**（文）`)

On the contrary, if `*` or `**` matches either of the following conditions, it will not work as the end of an emphasis mark anymore:

- The previous character is a space (e.g. `word *word`)
- The next character is a punctuation character and the previous character is a letter (e.g. `文。**文`)

“A punctuation character” includes non-ASCII ones, brackets, quotation marks and some symbols including `%` and `@`. More strictly speaking, a character whose 2-letters Unicode category starts with `P` is treated as a punctuation character here.

:::tip[How to upgrade]

If the offending emphasis mark is next to a space, move the space out of the range of emphasis:

```md title="english.md"
**Do not end a range of emphasis with a space.** Or `**` will not work.
```

If the offending emphasis mark is surrounded by both a punctuation character and a letter, you can fix it without modifying the content by:

1. Convert the document to MDX if it is a vanilla Markdown.
2. replace the offending emphasis mark with a raw HTML tag (`<em>` or `<strong>`) instead:

{/* prettier-ignore */}
```mdx title="japanese.mdx"
<strong>「。」の後に文を続けると`**`が意図した動作をしません。</strong>また、<strong>[リンク](https://docusaurus.io/)</strong>や<strong>`コード`</strong>のすぐ外側に`**`、そのさらに外側に句読点以外がある場合も同様です。
```

While not an ideal solution, you can also either of the following without converting the document to MDX:

- Move the most outside punctuation character out of the emphasis mark.

  {/* prettier-ignore */}
  ```md title="japanese.md"
  **「。」の後に文を続けると`**`が意図した動作をしません**。また、[**リンク**](https://docusaurus.io/)や・・・
  ```

- Put a space just outside of the offending `*` or `**`. This solution does not force you to convert the document to MDX.

  {/* prettier-ignore */}
  ```md title="japanese.md"
  **「。」の後に文を続けると`**`が意図した動作をしません。** また、**[リンク](https://docusaurus.io/)** や **`コード`** のすぐ外側に`**`、そのさらに外側に句読点以外がある場合も同様です。
  ```

:::

</details>

### MDX 插件

MDX 生态系统中所有官方包（Unified、Remark、Rehype 等）现在都[**仅支持 ES 模块**](https://gist.github.com/sindresorhus/a39789f98801d908bbc7ff3ecc99d99c)，不再支持 [CommonJS](https://nodejs.org/api/modules.html#modules-commonjs-modules)。

这意味着您不能再使用 `require("remark-plugin")`。

:::tip[升级指南]

Docusaurus v3 现在支持 [**ES 模块**](https://flaviocopes.com/es-modules/) 配置文件。我们建议您将配置文件迁移到 ES 模块，这样可以轻松导入 Remark 插件：

```js title="docusaurus.config.js"
import remarkPlugin from 'remark-plugin';

export default {
  title: 'Docusaurus',
  /* 在此使用 remark 插件的站点配置 */
};
```

如果您希望继续使用 CommonJS 模块，可以使用动态导入作为变通方案，以便在 CommonJS 模块中导入 ES 模块。幸运的是，[Docusaurus 配置支持使用异步函数](/docs/configuration#syntax-to-declare-docusaurus-config)来实现这一点。

```js title="docusaurus.config.js"
module.exports = async function () {
  const myPlugin = (await import('remark-plugin')).default;
  return {
    // 站点配置...
  };
};
```

:::

:::info[插件开发者须知]

如果您创建了自定义的 Remark 或 Rehype 插件，可能需要重构这些插件，甚至完全重写，因为新的 AST 结构发生了变化。我们创建了一个[专门的支持讨论](https://github.com/facebook/docusaurus/discussions/9337)来帮助插件开发者升级代码。

:::

### 格式化工具

最常用的格式化工具 Prettier 目前仅支持旧版 MDX v1，截至 Docusaurus v3.0.0 尚未支持 v3。您可以在代码的不兼容部分前添加 `{/* prettier-ignore */}` 以使其与 Prettier 兼容。

```mdx
{/* prettier-ignore */}
<SomeComponent>Some long text in the component</SomeComponent>
```

如果 `{/* prettier-ignore */}` 插入过多让您感到繁琐，可以考虑在 Prettier 开始支持 MDX v3 之前，通过将以下内容添加到 `.prettierignore` 文件来禁用 Prettier 对 MDX 的格式化：

```txt title=".prettierignore"
*.mdx
```

## 其他重大变更

除了 MDX v3 升级外，以下是 Docusaurus v3 带来的完整重大变更列表。

### Node.js v18.0

Node.js 16 [已终止支持](https://nodejs.org/en/blog/announcements/nodejs16-eol)，Docusaurus v3 现在要求 **Node.js >= 18.0**。

:::tip[升级指南]

在您的计算机上安装 Node.js 18.0+。

同时，配置您的持续集成、CDN 或主机以使用这个新的 Node.js 版本。

您还可以更新站点的 `package.json` 以防止使用不再支持的旧版本：

```diff title="package.json"
 {
   "engines": {
-     "node": ">=16.14"
+     "node": ">=18.0"
   }
 }
```

在升级到 Docusaurus v3 之前，先将您的 Docusaurus v2 站点升级到 Node.js 18。

:::

### React v18.0+

Docusaurus v3 现在要求 **React >= 18.0**。

React 18 自带了一些破坏性变更，根据您为站点编写的自定义 React 代码量，这些变更可能相对容易处理。官方主题和插件均已兼容 React 18。

:::info[升级指南]

阅读官方 [React v18.0](https://react.dev/blog/2022/03/29/react-v18) 和 [如何升级到 React 18](https://react.dev/blog/2022/03/08/react-18-upgrade-guide)，并检查您自己的 React 代码以确定哪些组件可能受此升级影响。

我们建议特别关注：

- 有状态组件的自动批处理
- 控制台报告的 React 水合新错误

:::

:::danger[React 18 新特性的实验性支持]

React 18 引入了新特性：

- `<Suspense>`
- `React.lazy()`
- `startTransition`

Docusaurus 对这些特性的支持尚处于实验阶段。未来我们可能需要调整集成方式，导致运行时行为发生变化。

:::

### Prism-React-Renderer v2.0+

Docusaurus v3 将 [`prism-react-renderer`](https://github.com/FormidableLabs/prism-react-renderer) 升级至 v2.0+。该库用于代码块的语法高亮。

:::info[升级指南]

这是包含破坏性变更的新主版本，我们无法保证严格的向后兼容性。[`prism-react-renderer` v2 发布说明](https://github.com/FormidableLabs/prism-react-renderer/releases/tag/prism-react-renderer%402.0.0)不够详尽，但 Docusaurus 用户需要注意 3 个主要变化。

需要升级依赖项：

```diff title="package.json"
 {
   "dependencies": {
-    "prism-react-renderer": "^1.3.5",
+    "prism-react-renderer": "^2.1.0",
 }
```

Docusaurus 配置文件中导入主题的 API 已更新：

```diff title="docusaurus.config.js"
- const lightTheme = require('prism-react-renderer/themes/github');
- const darkTheme = require('prism-react-renderer/themes/dracula');
+ const {themes} = require('prism-react-renderer');
+ const lightTheme = themes.github;
+ const darkTheme = themes.dracula;
```

此前 `react-prism-render` v1 [默认包含更多语言](https://github.com/FormidableLabs/prism-react-renderer/blob/v1.3.5/src/vendor/prism/includeLangs.js)。从 v2.0+ 开始，[默认包含的语言更少](https://github.com/FormidableLabs/prism-react-renderer/blob/prism-react-renderer%402.1.0/packages/generate-prism-languages/index.ts#L9)。您可能需要向 Docusaurus 配置添加额外语言：

```js title="docusaurus.config.js"
const siteConfig = {
  themeConfig: {
    prism: {
      // highlight-next-line
      additionalLanguages: ['bash', 'diff', 'json'],
    },
  },
};
```

:::

### React-Live v4.0+

对于使用 `@docusaurus/theme-live-codeblock` 包的用户，Docusaurus v3 将 [`react-live`](https://github.com/FormidableLabs/react-live) 升级至 v4.0+。

:::info[升级指南]

理论上您无需任何操作，现有交互式代码块应能继续正常工作。

但这是包含破坏性变更的新主版本，我们无法保证严格的向后兼容性。如遇问题请查阅 [v3](https://github.com/FormidableLabs/react-live/releases/tag/v3.0.0) 和 [v4](https://github.com/FormidableLabs/react-live/releases/tag/v4.0.0) 的变更日志。

:::

### remark-emoji v4.0+

Docusaurus v3 将 [`remark-emoji`](https://github.com/rhysd/remark-emoji) 升级至 v4.0+。该库用于支持 Markdown 中的 `:emoji:` 快捷语法。

:::info[升级指南]

大多数 Docusaurus 用户无需任何操作。使用表情符号短代码的用户应查阅 [更新日志](https://github.com/rhysd/remark-emoji/blob/master/CHANGELOG.md)，并确认表情符号渲染效果是否符合预期。

> **重大变更** 将 [node-emoji](https://www.npmjs.com/package/node-emoji) 从 v1 升级至 v2。此变更新增了大量新表情符号支持，同时移除了 GitHub 已失效的旧表情符号短代码。

:::

### Mermaid v10.4+

对于使用 `@docusaurus/theme-mermaid` 包的用户，Docusaurus v3 将 [`mermaid`](https://github.com/mermaid-js/mermaid) 升级至 v10.4+。

:::info[升级指南]

理论上您无需任何操作，现有图表应能继续正常工作。

但请注意这是包含破坏性变更的主版本升级，我们无法保证完全向后兼容。若遇到问题请查阅 [v10 更新日志](https://github.com/mermaid-js/mermaid/releases/tag/v10.0.0)。

:::

### TypeScript v5.1+

Docusaurus v3 现在要求 **TypeScript >= 5.1**。

:::info[升级指南]

将依赖项升级至 TypeScript 5+：

```diff title="package.json"
 {
   "devDependencies": {
-    "typescript": "~4.7.4"
+    "typescript": "~5.2.2"
   }
 }
```

:::

### TypeScript 基础配置

官方 Docusaurus TypeScript 配置已从外部包 [`@tsconfig/docusaurus`](https://www.npmjs.com/package/@tsconfig/docusaurus) 迁移至我们新的 monorepo 包 [`@docusaurus/tsconfig`](https://www.npmjs.com/package/@docusaurus/tsconfig)。

该新包将与所有其他 Docusaurus 核心包保持同步版本，用于确保 TypeScript 的向后兼容性和主版本升级时的破坏性变更管理。

:::info[升级指南]

将外部 TypeScript 配置包替换为新的官方包：

```diff title="package.json"
 {
   "devDependencies": {
-    "@tsconfig/docusaurus": "^1.0.7",
+    "@docusaurus/tsconfig": "3.0.0",
   }
 }
```

在 `tsconfig.json` 文件中使用：

```diff title="tsconfig.json"
 {
-  "extends": "@tsconfig/docusaurus/tsconfig.json",
+  "extends": "@docusaurus/tsconfig",
   "compilerOptions": {
     "baseUrl": "."
   }
 }
```

:::

### 新配置加载器

Docusaurus v3 将其内部配置加载库从 [`import-fresh`](https://github.com/sindresorhus/import-fresh) 更换为 [`jiti`](https://github.com/unjs/jiti)。该组件负责加载诸如 `docusaurus.config.js`、`sidebars.js` 等文件以及 Docusaurus 插件。

:::info[升级指南]

理论上您无需任何操作，现有配置文件应能继续正常工作。

但请注意这是核心依赖的重大变更，可能会引发细微的行为变化。

:::

### 警告提示框变更

由于历史原因，我们曾支持未文档化的红色 `:::warning` 提示框。

:::danger[警告]

这是 Docusaurus v2 的 `:::warning` 提示框。

:::

但其颜色和图标始终存在错误。Docusaurus v3 正式重新引入 `:::warning` 提示框，完善其文档，并修正了颜色与图标。

:::warning

这是 Docusaurus v3 的 `:::warning` 警示框。

:::

:::info[升级指南]

若您曾使用未文档化的 `:::warning` 警示框，请逐一检查黄色是否仍适用。如需保留红色警示，请改用 `:::danger`。

Docusaurus v3 已[弃用 `:::caution`](https://github.com/facebook/docusaurus/pull/9308) 警示框。请将 `:::caution`（黄色）重构为 `:::warning`（黄色）或 `:::danger`（红色）。

如需保留"caution"标题，可重构为 `:::warning[caution]`（黄色）。

:::

### 版本化侧边栏

此破坏性变更仅影响 **2021年12月前** 在 `v2.0.0-beta.10` 之前启用文档版本化的**早期 Docusaurus v2 用户**。

创建 `v1.0.0` 版本时，侧边栏文件包含 `version-v1.0.0/` 前缀，[Docusaurus v3 已不再支持此语法](https://github.com/facebook/docusaurus/pull/9310)。

```json title="versioned_sidebars/version-v1.0.0-sidebars.json"
{
  "version-v1.0.0/docs": [
    "version-v1.0.0/introduction",
    "version-v1.0.0/prerequisites"
  ]
}
```

:::info[升级指南]

从版本化侧边栏中移除冗余前缀：

```json title="versioned_sidebars/version-v1.0.0-sidebars.json"
{
  "docs": ["introduction", "prerequisites"]
}
```

:::

### 博客订阅限制

`@docusaurus/plugin-content-blog` 现在默认将 RSS 订阅限制为最近20篇文章。对于大型博客站点，此默认值可避免订阅文件无限膨胀。

:::info[升级指南]

如需恢复"无限订阅"行为，可通过新增的 `limit: false` 配置实现：

```js title="docusaurus.config.js"
const blogOptions = {
  feedOptions: {
    // highlight-next-line
    limit: false,
  },
};
```

:::

### 文档主题重构

对于自定义过文档主题组件（如 `@theme/DocPage`）的用户，这些组件已进行重大重构以提升可定制性。

严格来说**这并非破坏性变更**，因为这些组件原本就**标记为不安全定制**。但许多站点仍进行了深度定制，需注意原有修改可能失效。

:::info[升级指南]

删除所有自定义组件，重新通过 swizzle 生成，并在新组件基础上重新应用定制。

或参考[PR说明](https://github.com/facebook/docusaurus/pull/7966)了解新版主题组件树结构，尝试手动迁移现有定制。

:::

## 可选变更

以下变更非强制要求，但了解这些特性可充分发挥 Docusaurus v3 优势。

### 自动 JSX 运行时

Docusaurus v3 现采用 React 18 的[自动 JSX 转换](https://legacy.reactjs.org/blog/2020/09/22/introducing-the-new-jsx-transform.html)。

未使用 React API 的 JSX 文件不再需要显式导入 React。

```diff title="src/components/MyComponent.js"
- import React from 'react';

  export default function MyComponent() {
    return <div>Hello</div>;
  }
```

### ESM 与 TypeScript 配置

Docusaurus v3 支持 ESM 和 TypeScript 格式的配置文件，建议考虑采用这些新特性。

```js title="docusaurus.config.js"
export default {
  title: 'Docusaurus',
  url: 'https://docusaurus.io',
  // your site config ...
};
```

```ts title="docusaurus.config.ts"
import type {Config} from '@docusaurus/types';
import type * as Preset from '@docusaurus/preset-classic';

const config: Config = {
  title: 'My Site',
  favicon: 'img/favicon.ico',
  presets: [
    [
      'classic',
      {
        /* Your preset config here */
      } satisfies Preset.Options,
    ],
  ],

  themeConfig: {
    /* Your theme config here */
  } satisfies Preset.ThemeConfig,
};

export default config;
```

### 使用 `.mdx` 扩展名

我们建议在 Markdown 文件中使用 JSX、`import` 或 `export`（即 MDX 特性）时始终采用 `.mdx` 扩展名。这更符合语义规范，并能提升与外部工具（IDE、格式化工具、代码检查器等）的兼容性。

未来版本的 Docusaurus 中，`.md` 文件将作为标准 [CommonMark](https://commonmark.org/) 解析，不再支持这些特性。在 Docusaurus v3 中，`.md` 文件仍会被编译为 MDX 文件，但后续将支持 [手动切换至 CommonMark 模式](https://github.com/facebook/docusaurus/issues/3018)。

### 数学公式包升级

若使用 Docusaurus 渲染 [数学公式](../guides/markdown-features/markdown-features-math-equations.mdx)，需更新 MDX 插件。

请确保为 Docusaurus v3（使用 MDX v3）安装 `remark-math 6` 和 `rehype-katex 7`，其他版本可能不兼容。

```diff package.json
{
-  "remark-math": "^3.0.0",
+  "remark-math": "^6.0.0",
-  "rehype-katex": "^5.0.0"
+  "rehype-katex": "^7.0.0"
}
```

### 关闭 MDX v1 兼容模式

Docusaurus v3 默认启用了 [MDX v1 兼容选项](../api/docusaurus.config.js.mdx#markdown)。

```js title="docusaurus.config.js"
export default {
  markdown: {
    mdx1Compat: {
      comments: true,
      admonitions: true,
      headingIds: true,
    },
  },
};
```

#### `comments` 选项

该选项允许在 MDX 中使用 HTML 注释，而官方标准已不再支持 HTML 注释。

对于 MDX 文件，我们建议逐步改用 MDX 的 `{/* 注释 */}` 替代 HTML 的 `<!-- 注释 -->`，然后关闭此兼容选项。

:::info[博客截断标记]

默认的博客截断标记现已同时支持 `<!-- truncate -->` 和 `{/* truncate */}`。

:::

#### `admonitions` 选项

该选项支持 Docusaurus v2 的 [警告框标题](../guides/markdown-features/markdown-features-admonitions.mdx#specifying-title) 语法：

```md
:::note Your Title

content

:::
```

Docusaurus 现通过 [Markdown 指令](https://talk.commonmark.org/t/generic-directives-plugins-syntax/444)（基于 [remark-directive](https://github.com/remarkjs/remark-directive)）实现警告框，指定指令标签需使用方括号：

```md
:::note[Your Title]

content

:::
```

建议逐步采用新的 Markdown 指令标签语法，随后关闭此兼容选项。

#### `headingIds` 选项

该选项支持 Docusaurus v2 的 [显式标题 ID](../guides/markdown-features/markdown-features-toc.mdx#heading-ids) 语法：

<Code language="md">{'### Hello World \u007B#my-explicit-id}\n'}</Code>

此语法在 MDX 中已失效，需转义 `{` 字符：`{#my-explicit-id}`。

建议暂时保持此兼容选项开启，直至我们提供兼容新版 MDX 的新语法。

## 故障排查

若遇升级问题，建议优先尝试：

- 确保所有文档能在 [MDX 演练场](https://mdxjs.com/playground/) 编译，或使用 [`npx docusaurus-mdx-checker`](https://github.com/slorber/docusaurus-mdx-checker)
- 删除 `node_modules` 和 `package-lock.json` 后重新运行 `npm install`
- 执行 `docusaurus clear` 清除缓存
- 移除可能不兼容 Docusaurus v3 的第三方插件
- 删除所有 swizzle 过的组件

若问题仍未解决，可通过以下支持渠道寻求帮助：

- [Docusaurus v3 - 升级支持](https://github.com/facebook/docusaurus/discussions/9336)
- [Docusaurus v3 - Discord频道 #migration-v2-to-v3](https://discord.com/channels/398180168688074762/1154771869094912090)
- [MDX v3 - 升级支持](https://github.com/facebook/docusaurus/discussions/9053)
- [MDX v3 - Remark/Rehype插件支持](https://github.com/facebook/docusaurus/discussions/9337)
- [MDX v3 - Discord频道 #migration-mdx-v3](https://discord.com/channels/398180168688074762/1116724556976111616)

请注意**我们的时间非常宝贵**。为确保您的支持请求不被忽略，我们恳请您：

- 提供**最小化**可复现案例，建议通过[docusaurus.new](https://docusaurus.new)创建
- 提供展示问题的线上部署链接（如果您的站点能成功构建）
- 清晰描述问题本质，避免模糊表述如"无法运行"
- 包含所有相关材料：代码片段、仓库链接、git分支地址、完整堆栈跟踪、截图及视频
- 以清晰简洁的方式呈现请求，表明您已尽力协助我们解决问题

您也可以选择付费的[Docusaurus服务提供商](https://github.com/facebook/docusaurus/discussions/9281)代为升级。若您的项目是开源的，还可以向社区寻求[免费志愿帮助](https://github.com/facebook/docusaurus/discussions/9283)。